test/files/invalid/include_integer.stderr
error: unrecognized token `integer literal "7"`, expected one of string
  ┌─ test/files/invalid/include_integer.fbs:1:9
  │
1 │ include 7;
  │         ^

